@@ -37,13 +37,6 @@ use MediaWiki\MediaWikiServices;
 class WikiRevision implements ImportableUploadRevision, ImportableOldRevision {
 
 	/**
-	 * @since 1.17
-	 * @deprecated in 1.29. Unused.
-	 * @note Introduced in 9b3128eb2b654761f21fd4ca1d5a1a4b796dc912, unused there, unused now.
-	 */
-	public $importer = null;
-
-	/**
 	 * @since 1.2
 	 * @var Title
 	 */
